--- a/pom.xml
+++ b/pom.xml
@@ -3,7 +3,7 @@
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>faminto.com</groupId>
 	<artifactId>faminto.com</artifactId>
-	<version>0.0.1</version>
+	<version>0.1.0</version>
 	<packaging>war</packaging>
 
 	<dependencies>
@@ -40,7 +40,7 @@
 
 	<build>
 		<sourceDirectory>src</sourceDirectory>
-		<finalName>${project.artifactId}.war</finalName>
+		<finalName>${project.artifactId}</finalName>
 		<plugins>
 			<plugin>
 				<artifactId>maven-compiler-plugin</artifactId>
