--- a/WebContent/WEB-INF/web.xml
+++ b/WebContent/WEB-INF/web.xml
@@ -19,6 +19,6 @@
   
   <context-param>
     <param-name>primefaces.THEME</param-name>
-    <param-value>rocket</param-value>
+    <param-value>faminto</param-value>
   </context-param>
 </web-app>
