--- a/pom.xml
+++ b/pom.xml
@@ -3,7 +3,7 @@
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>faminto.com</groupId>
 	<artifactId>faminto.com</artifactId>
-	<version>1.0.0</version>
+	<version>1.2.0</version>
 	<packaging>war</packaging>
 
 	<dependencies>
@@ -22,6 +22,11 @@
 			<groupId>org.primefaces.themes</groupId>
 			<artifactId>delta</artifactId>
 			<version>1.0.10</version>
+		</dependency>
+		<dependency>
+			<groupId>org.hibernate.validator</groupId>
+			<artifactId>hibernate-validator</artifactId>
+			<version>6.0.0.Alpha1</version>
 		</dependency>
 	</dependencies>
 
